package main

import (
	"context"
	"flag"
	"fmt"
	"log"
	"os"
	"os/signal"
	"syscall"
	"time"

	"crawler-platform/cmd/grpcserver/tasksmanager"
	"crawler-platform/logger"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

func main() {
	// è§£æå‘½ä»¤è¡Œå‚æ•°
	serverAddr := flag.String("server", "localhost:50051", "gRPC æœåŠ¡å™¨åœ°å€")
	clientName := flag.String("name", "client-1", "å®¢æˆ·ç«¯åç§°")
	flag.Parse()

	// åˆå§‹åŒ–æ—¥å¿—è®°å½•å™¨
	logger.InitGlobalLogger(logger.NewConsoleLogger(true, true, true, true))

	// è¿æ¥åˆ°æœåŠ¡å™¨
	conn, err := grpc.NewClient(*serverAddr, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("è¿æ¥æœåŠ¡å™¨å¤±è´¥: %v", err)
	}
	defer conn.Close()

	// åˆ›å»ºå®¢æˆ·ç«¯
	client := tasksmanager.NewTasksManagerClient(conn)
	ctx := context.Background()

	// æµ‹è¯•åŸºç¡€è¿æ¥
	log.Println("=== æµ‹è¯•åŸºç¡€è¿æ¥ ===")
	if err := testBasicConnection(ctx, client); err != nil {
		log.Printf("åŸºç¡€è¿æ¥æµ‹è¯•å¤±è´¥: %v", err)
	}

	// æµ‹è¯•å®¢æˆ·ç«¯æ³¨å†Œ
	log.Println("\n=== å®¢æˆ·ç«¯æ³¨å†Œ ===")
	clientID, regResp, err := testNodeManagementWithResponse(ctx, client, *clientName)
	if err != nil {
		log.Printf("å®¢æˆ·ç«¯æ³¨å†Œå¤±è´¥: %v", err)
		return
	}
	
	// åˆ›å»ºèŠ‚ç‚¹ç®¡ç†å™¨ï¼ˆç”¨äºç®¡ç†åˆ°æœåŠ¡å™¨èŠ‚ç‚¹çš„è¿æ¥ï¼‰
	nodeManager := NewNodeManager(client, conn, clientID)
	defer nodeManager.Close()

	// å¤„ç†æ³¨å†Œå“åº”ï¼Œè‡ªåŠ¨è¿æ¥åˆ°æ‰€æœ‰æœåŠ¡å™¨èŠ‚ç‚¹
	if regResp != nil && regResp.Success && len(regResp.ServerNodes) > 0 {
		log.Printf("ğŸ“¡ å‘ç° %d ä¸ªæœåŠ¡å™¨èŠ‚ç‚¹ï¼Œå¼€å§‹è‡ªåŠ¨è¿æ¥", len(regResp.ServerNodes))
		nodeManager.OnNodesDiscovered(regResp.ServerNodes)
	}

	// å¯åŠ¨è‡ªåŠ¨å‘ç°
	log.Println("\n=== å¯åŠ¨è‡ªåŠ¨èŠ‚ç‚¹å‘ç° ===")
	discoveryCtx, cancelDiscovery := context.WithCancel(context.Background())
	defer cancelDiscovery()
	go nodeManager.StartAutoDiscovery(discoveryCtx)

	// å¯åŠ¨è¿æ¥æ± å¥åº·æ£€æŸ¥
	log.Println("\n=== å¯åŠ¨è¿æ¥æ± å¥åº·æ£€æŸ¥ ===")
	healthCtx, cancelHealth := context.WithCancel(context.Background())
	defer cancelHealth()
	go nodeManager.StartConnectionHealthCheck(healthCtx)

	// å¯åŠ¨å®¢æˆ·ç«¯å¿ƒè·³ï¼ˆåŒ…å«è‡ªåŠ¨è¿æ¥æ–°æœåŠ¡å™¨èŠ‚ç‚¹åŠŸèƒ½ï¼‰
	log.Println("\n=== å¯åŠ¨å®¢æˆ·ç«¯å¿ƒè·³ï¼ˆè‡ªåŠ¨å‘ç°æ–°æœåŠ¡å™¨èŠ‚ç‚¹ï¼‰===")
	go startHeartbeatWithNodeManager(ctx, client, *clientName, clientID, nodeManager)

	// ç­‰å¾…ä¸­æ–­ä¿¡å·
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit

	log.Println("å®¢æˆ·ç«¯æ­£åœ¨å…³é—­...")
}

// testBasicConnection æµ‹è¯•åŸºç¡€è¿æ¥
func testBasicConnection(ctx context.Context, client tasksmanager.TasksManagerClient) error {
	// è·å–å®¢æˆ·ç«¯åˆ—è¡¨
	resp, err := client.GetTaskClientInfoList(ctx, &tasksmanager.TaskClientInfoListRequest{})
	if err != nil {
		return fmt.Errorf("è·å–å®¢æˆ·ç«¯åˆ—è¡¨å¤±è´¥: %w", err)
	}
	log.Printf("å½“å‰å®¢æˆ·ç«¯æ•°é‡: %d", len(resp.Items))

	// è·å–èŠ‚ç‚¹åˆ—è¡¨
	nodeResp, err := client.GetGrpcServerNodeInfoList(ctx, &tasksmanager.GrpcServerNodeInfoListRequest{})
	if err != nil {
		return fmt.Errorf("è·å–èŠ‚ç‚¹åˆ—è¡¨å¤±è´¥: %w", err)
	}
	log.Printf("å½“å‰èŠ‚ç‚¹æ•°é‡: %d", len(nodeResp.Items))

	return nil
}

// testNodeManagement æµ‹è¯•èŠ‚ç‚¹ç®¡ç†ï¼ˆä¿æŒå‘åå…¼å®¹ï¼‰
func testNodeManagement(ctx context.Context, client tasksmanager.TasksManagerClient, clientName string) (string, error) {
	clientID, _, err := testNodeManagementWithResponse(ctx, client, clientName)
	return clientID, err
}

// testNodeManagementWithResponse å®¢æˆ·ç«¯æ³¨å†Œå¹¶è¿”å›å“åº”
func testNodeManagementWithResponse(ctx context.Context, client tasksmanager.TasksManagerClient, clientName string) (string, *tasksmanager.RegisterClientResponse, error) {
	// è·å–çœŸå®çš„ç³»ç»Ÿä¿¡æ¯
	_, systemInfo, cpuInfo, memoryInfo, _ := getRealSystemInfo()
	
	// åˆ›å»ºå®¢æˆ·ç«¯ä¿¡æ¯ï¼ˆä¸æ˜¯æœåŠ¡å™¨èŠ‚ç‚¹ä¿¡æ¯ï¼‰
	clientInfo := &tasksmanager.TaskClientInfo{
		ClientUuid:          fmt.Sprintf("client-%s-%d", clientName, time.Now().Unix()),
		ClientName:          clientName,
		ClientIp:            "127.0.0.1",
		ClientSystem:        systemInfo,
		ClientVersion:       "1.0.0",
		ClientCpu:           cpuInfo,
		ClientMemory:        memoryInfo,
		ClientCreateTime:    time.Now().Format(time.RFC3339),
		ClientLastActiveTime: time.Now().Format(time.RFC3339),
		ClientTaskStatus:    tasksmanager.ClientTaskStatus_CLIENT_TASK_STATUS_ONLINE,
	}

	// æ³¨å†Œå®¢æˆ·ç«¯ï¼ˆä½¿ç”¨å®¢æˆ·ç«¯ä¸“ç”¨æ¥å£ï¼‰
	regResp, err := client.RegisterClient(ctx, clientInfo)
	if err != nil {
		return "", nil, fmt.Errorf("å®¢æˆ·ç«¯æ³¨å†Œå¤±è´¥: %w", err)
	}

	if regResp.Success {
		log.Printf("å®¢æˆ·ç«¯æ³¨å†ŒæˆåŠŸ: %s", clientInfo.ClientUuid)
		if len(regResp.ServerNodes) > 0 {
			log.Printf("ğŸ“¡ å‘ç° %d ä¸ªæœåŠ¡å™¨èŠ‚ç‚¹ï¼Œå°†è‡ªåŠ¨è¿æ¥", len(regResp.ServerNodes))
		}
	}

	return clientInfo.ClientUuid, regResp, nil
}

// startHeartbeatWithNodeManager å¯åŠ¨å®¢æˆ·ç«¯å¿ƒè·³ï¼ˆåŒ…å«èŠ‚ç‚¹ç®¡ç†å™¨ï¼‰
func startHeartbeatWithNodeManager(ctx context.Context, client tasksmanager.TasksManagerClient, clientName, clientID string, nodeManager *NodeManager) {
	ticker := time.NewTicker(10 * time.Second)
	defer ticker.Stop()

	// åˆå§‹åŒ–ç³»ç»Ÿä¿¡æ¯
	_, systemInfo, cpuInfo, memoryInfo, _ := getRealSystemInfo()
	firstRun := true

	for range ticker.C {
		// è·å–çœŸå®çš„ç³»ç»Ÿä¿¡æ¯
		cpuUsage, err := getCPUUsage()
		if err != nil {
			log.Printf("è·å– CPU ä½¿ç”¨ç‡å¤±è´¥: %v", err)
			cpuUsage = 0
		}

		memoryUsed, memoryTotal, err := getMemoryUsage()
		if err != nil {
			log.Printf("è·å–å†…å­˜ä½¿ç”¨æƒ…å†µå¤±è´¥: %v", err)
			memoryUsed = 0
			memoryTotal = 0
		}

		// è·å–ç½‘ç»œä½¿ç”¨æƒ…å†µï¼ˆé¦–æ¬¡è°ƒç”¨éœ€è¦ç­‰å¾…1ç§’ï¼‰
		networkRx, networkTx, err := getNetworkUsage()
		if err != nil {
			if firstRun {
				// é¦–æ¬¡è¿è¡Œéœ€è¦åˆå§‹åŒ–ï¼Œè·³è¿‡æœ¬æ¬¡
				firstRun = false
				continue
			}
			log.Printf("è·å–ç½‘ç»œä½¿ç”¨æƒ…å†µå¤±è´¥: %v", err)
			networkRx = 0
			networkTx = 0
		}
		firstRun = false

		// è·å–ç£ç›˜ä½¿ç”¨æƒ…å†µ
		diskUsed, diskTotal, err := getDiskUsage()
		if err != nil {
			log.Printf("è·å–ç£ç›˜ä½¿ç”¨æƒ…å†µå¤±è´¥: %v", err)
			diskUsed = 0
			diskTotal = 0
		}
		
		// åˆ›å»ºå®¢æˆ·ç«¯ä¿¡æ¯ï¼ˆä¸æ˜¯æœåŠ¡å™¨èŠ‚ç‚¹ä¿¡æ¯ï¼‰
		clientInfo := &tasksmanager.TaskClientInfo{
			ClientUuid:          clientID,
			ClientName:          clientName,
			ClientIp:            "127.0.0.1",
			ClientSystem:        systemInfo,
			ClientVersion:       "1.0.0",
			ClientCpu:           cpuInfo,
			ClientMemory:        memoryInfo,
			ClientCreateTime:    time.Now().Format(time.RFC3339),
			ClientLastActiveTime: time.Now().Format(time.RFC3339),
			ClientTaskStatus:    tasksmanager.ClientTaskStatus_CLIENT_TASK_STATUS_ONLINE,
			CpuUsagePercent:     &cpuUsage,
			MemoryUsedBytes:     &memoryUsed,
			MemoryTotalBytes:    &memoryTotal,
			NetworkRxBytesPerSec: &networkRx,
			NetworkTxBytesPerSec: &networkTx,
			DiskUsedBytes:       &diskUsed,
			DiskTotalBytes:      &diskTotal,
		}

		updateTime := time.Now().Format(time.RFC3339)
		clientInfo.ResourceUpdateTime = &updateTime

		// ä½¿ç”¨å®¢æˆ·ç«¯å¿ƒè·³æ¥å£ï¼ˆä¸æ˜¯æœåŠ¡å™¨èŠ‚ç‚¹å¿ƒè·³ï¼‰
		resp, err := client.ClientHeartbeat(ctx, clientInfo)
		if err != nil {
			log.Printf("å®¢æˆ·ç«¯å¿ƒè·³å‘é€å¤±è´¥: %v", err)
			continue
		}

		if resp.Success {
			memPercent := float64(0)
			if memoryTotal > 0 {
				memPercent = float64(memoryUsed) / float64(memoryTotal) * 100
			}
			log.Printf("å®¢æˆ·ç«¯å¿ƒè·³å‘é€æˆåŠŸ: %s (CPU: %.1f%%, Memory: %.1f%% [%.2fGB/%.2fGB], ç½‘ç»œ: â†“%.2fMB/s â†‘%.2fMB/s)", 
				clientID, cpuUsage, memPercent,
				float64(memoryUsed)/1024/1024/1024, float64(memoryTotal)/1024/1024/1024,
				networkRx/1024/1024, networkTx/1024/1024)

			// å¤„ç†å¿ƒè·³å“åº”ä¸­çš„æ–°æœåŠ¡å™¨èŠ‚ç‚¹ä¿¡æ¯
			if nodeManager != nil && len(resp.NewServerNodes) > 0 {
				log.Printf("ğŸ“¡ å¿ƒè·³å“åº”ä¸­å‘ç° %d ä¸ªæ–°æœåŠ¡å™¨èŠ‚ç‚¹ï¼Œæ­£åœ¨è‡ªåŠ¨è¿æ¥...", len(resp.NewServerNodes))
				nodeManager.OnNodesDiscovered(resp.NewServerNodes)
			}
		}
	}
}

// startHeartbeat å¯åŠ¨å¿ƒè·³ï¼ˆæ—§ç‰ˆæœ¬ï¼Œä¿æŒå‘åå…¼å®¹ï¼‰
func startHeartbeat(ctx context.Context, client tasksmanager.TasksManagerClient, clientName string) {
	clientID := fmt.Sprintf("client-%s-%d", clientName, time.Now().Unix())
	startHeartbeatWithNodeManager(ctx, client, clientName, clientID, nil)
}
