package main

import (
	"context"
	"encoding/json"
	"fmt"
	"log"
	"sync"
	"time"

	"crawler-platform/cmd/grpcserver/tasksmanager"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// NodeManager èŠ‚ç‚¹ç®¡ç†å™¨
// è´Ÿè´£è‡ªåŠ¨å‘ç°å’Œè¿æ¥åˆ°å…¶ä»–èŠ‚ç‚¹
type NodeManager struct {
	// ä¸»æœåŠ¡å™¨å®¢æˆ·ç«¯
	mainClient tasksmanager.TasksManagerClient
	mainConn   *grpc.ClientConn

	// å·²è¿æ¥çš„èŠ‚ç‚¹å®¢æˆ·ç«¯æ˜ å°„ (nodeUUID -> client)
	connectedNodes   map[string]tasksmanager.TasksManagerClient
	connectedNodesMu sync.RWMutex

	// èŠ‚ç‚¹è¿æ¥æ˜ å°„ (nodeUUID -> grpc.Conn)
	nodeConnections   map[string]*grpc.ClientConn
	nodeConnectionsMu sync.RWMutex

	// å·²çŸ¥èŠ‚ç‚¹åˆ—è¡¨
	knownNodes   map[string]*tasksmanager.GrpcServerNodeInfo
	knownNodesMu sync.RWMutex

	// èŠ‚ç‚¹ ID
	nodeID string
}

// NewNodeManager åˆ›å»ºæ–°çš„èŠ‚ç‚¹ç®¡ç†å™¨
func NewNodeManager(mainClient tasksmanager.TasksManagerClient, mainConn *grpc.ClientConn, nodeID string) *NodeManager {
	return &NodeManager{
		mainClient:      mainClient,
		mainConn:        mainConn,
		connectedNodes:  make(map[string]tasksmanager.TasksManagerClient),
		nodeConnections: make(map[string]*grpc.ClientConn),
		knownNodes:      make(map[string]*tasksmanager.GrpcServerNodeInfo),
		nodeID:          nodeID,
	}
}

// ConnectToNode è¿æ¥åˆ°æŒ‡å®šçš„èŠ‚ç‚¹
func (nm *NodeManager) ConnectToNode(nodeInfo *tasksmanager.GrpcServerNodeInfo) error {
	// ä¸è¿æ¥è‡ªå·±
	if nodeInfo.NodeUuid == nm.nodeID {
		return nil
	}

	// æ£€æŸ¥æ˜¯å¦å·²è¿æ¥ï¼ˆè¿æ¥å¤ç”¨ï¼‰
	nm.connectedNodesMu.RLock()
	if _, exists := nm.connectedNodes[nodeInfo.NodeUuid]; exists {
		// æ£€æŸ¥è¿æ¥æ˜¯å¦ä»ç„¶æœ‰æ•ˆï¼ˆé€šè¿‡æ£€æŸ¥è¿æ¥çŠ¶æ€ï¼‰
		nm.nodeConnectionsMu.RLock()
		conn, connExists := nm.nodeConnections[nodeInfo.NodeUuid]
		nm.nodeConnectionsMu.RUnlock()

		if connExists && conn != nil {
			// è¿æ¥å­˜åœ¨ä¸”æœ‰æ•ˆï¼Œå¤ç”¨è¿æ¥
			nm.connectedNodesMu.RUnlock()
			return nil // å·²è¿æ¥ï¼Œå¤ç”¨ç°æœ‰è¿æ¥
		} else {
			// è¿æ¥å·²æ–­å¼€ï¼Œæ¸…ç†å¹¶é‡æ–°è¿æ¥
			nm.connectedNodesMu.RUnlock()
			nm.connectedNodesMu.Lock()
			delete(nm.connectedNodes, nodeInfo.NodeUuid)
			nm.connectedNodesMu.Unlock()
			nm.nodeConnectionsMu.Lock()
			delete(nm.nodeConnections, nodeInfo.NodeUuid)
			nm.nodeConnectionsMu.Unlock()
			log.Printf("âš ï¸ æ£€æµ‹åˆ°èŠ‚ç‚¹ %s è¿æ¥å·²æ–­å¼€ï¼Œå°†é‡æ–°è¿æ¥", nodeInfo.NodeUuid)
		}
	} else {
		nm.connectedNodesMu.RUnlock()
	}

	// æ„å»ºèŠ‚ç‚¹åœ°å€
	// å¦‚æœèŠ‚ç‚¹ IP æ˜¯ 0.0.0.0ï¼Œåˆ™ä½¿ç”¨ localhost
	nodeIP := nodeInfo.NodeIp
	if nodeIP == "0.0.0.0" || nodeIP == "" {
		nodeIP = "127.0.0.1"
	}
	nodeAddr := fmt.Sprintf("%s:%s", nodeIP, nodeInfo.NodePort)

	log.Printf("ğŸ”— æ­£åœ¨è‡ªåŠ¨è¿æ¥åˆ°æœåŠ¡å™¨èŠ‚ç‚¹: %s (%s)", nodeInfo.NodeUuid, nodeAddr)

	// å»ºç«‹ gRPC è¿æ¥ï¼ˆå¸¦è¶…æ—¶ï¼‰
	conn, err := grpc.NewClient(nodeAddr,
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithTimeout(5*time.Second))

	if err != nil {
		log.Printf("âŒ è¿æ¥æœåŠ¡å™¨èŠ‚ç‚¹å¤±è´¥ %s (%s): %v", nodeInfo.NodeUuid, nodeAddr, err)
		return fmt.Errorf("è¿æ¥èŠ‚ç‚¹å¤±è´¥ %s: %w", nodeAddr, err)
	}

	// éªŒè¯è¿æ¥æ˜¯å¦çœŸçš„å¯ç”¨ï¼ˆå°è¯•è°ƒç”¨ä¸€ä¸ªç®€å•çš„ RPCï¼‰
	testClient := tasksmanager.NewTasksManagerClient(conn)
	testCtx, testCancel := context.WithTimeout(context.Background(), 2*time.Second)
	_, testErr := testClient.GetGrpcServerNodeInfoList(testCtx, &tasksmanager.GrpcServerNodeInfoListRequest{})
	testCancel()

	if testErr != nil {
		conn.Close()
		log.Printf("âŒ æœåŠ¡å™¨èŠ‚ç‚¹è¿æ¥éªŒè¯å¤±è´¥ %s (%s): %v", nodeInfo.NodeUuid, nodeAddr, testErr)
		return fmt.Errorf("è¿æ¥éªŒè¯å¤±è´¥ %s: %w", nodeAddr, testErr)
	}

	// è¿æ¥æˆåŠŸï¼Œä¿å­˜è¿æ¥å’Œå®¢æˆ·ç«¯åˆ°è¿æ¥æ± 
	nm.nodeConnectionsMu.Lock()
	nm.nodeConnections[nodeInfo.NodeUuid] = conn
	nm.nodeConnectionsMu.Unlock()

	nm.connectedNodesMu.Lock()
	nm.connectedNodes[nodeInfo.NodeUuid] = testClient
	nm.connectedNodesMu.Unlock()

	// æ·»åŠ åˆ°å·²çŸ¥èŠ‚ç‚¹åˆ—è¡¨
	nm.knownNodesMu.Lock()
	nm.knownNodes[nodeInfo.NodeUuid] = nodeInfo
	nm.knownNodesMu.Unlock()

	log.Printf("âœ… æˆåŠŸè¿æ¥åˆ°æœåŠ¡å™¨èŠ‚ç‚¹: %s (%s)ï¼Œè¿æ¥æ± å¤§å°: %d",
		nodeInfo.NodeUuid, nodeAddr, len(nm.nodeConnections))

	return nil
}

// OnNewNodeDiscovered å½“å‘ç°æ–°èŠ‚ç‚¹æ—¶è°ƒç”¨
func (nm *NodeManager) OnNewNodeDiscovered(nodeInfo *tasksmanager.GrpcServerNodeInfo) {
	// ä¸è¿æ¥è‡ªå·±
	if nodeInfo.NodeUuid == nm.nodeID {
		return
	}

	// æ£€æŸ¥æ˜¯å¦å·²çŸ¥
	nm.knownNodesMu.RLock()
	_, known := nm.knownNodes[nodeInfo.NodeUuid]
	nm.knownNodesMu.RUnlock()

	if !known {
		log.Printf("ğŸ” å‘ç°æ–°æœåŠ¡å™¨èŠ‚ç‚¹: %s (%s:%s)", nodeInfo.NodeUuid, nodeInfo.NodeIp, nodeInfo.NodePort)

		// å…ˆæ·»åŠ åˆ°å·²çŸ¥åˆ—è¡¨ï¼ˆé˜²æ­¢é‡å¤è¿æ¥ï¼‰
		nm.knownNodesMu.Lock()
		nm.knownNodes[nodeInfo.NodeUuid] = nodeInfo
		nm.knownNodesMu.Unlock()

		// è‡ªåŠ¨è¿æ¥åˆ°æ–°èŠ‚ç‚¹ï¼ˆåŒæ­¥è°ƒç”¨ï¼Œä»¥ä¾¿æ£€æŸ¥é”™è¯¯ï¼‰
		if err := nm.ConnectToNode(nodeInfo); err != nil {
			log.Printf("âŒ è¿æ¥æœåŠ¡å™¨èŠ‚ç‚¹å¤±è´¥ %s: %v", nodeInfo.NodeUuid, err)
			// è¿æ¥å¤±è´¥ï¼Œä»å·²çŸ¥åˆ—è¡¨ä¸­ç§»é™¤ï¼Œä»¥ä¾¿ä¸‹æ¬¡é‡è¯•
			nm.knownNodesMu.Lock()
			delete(nm.knownNodes, nodeInfo.NodeUuid)
			nm.knownNodesMu.Unlock()
		}
	} else {
		// èŠ‚ç‚¹å·²çŸ¥é“ï¼Œé™é»˜è·³è¿‡
	}
}

// OnNodesDiscovered æ‰¹é‡å¤„ç†å‘ç°çš„èŠ‚ç‚¹
func (nm *NodeManager) OnNodesDiscovered(nodes []*tasksmanager.GrpcServerNodeInfo) {
	for _, node := range nodes {
		nm.OnNewNodeDiscovered(node)
	}
}

// ProcessClientHeartbeatResponse å¤„ç†å®¢æˆ·ç«¯å¿ƒè·³å“åº”ï¼Œæ£€æŸ¥æ˜¯å¦æœ‰æ–°ä¸Šçº¿çš„æœåŠ¡å™¨èŠ‚ç‚¹
func (nm *NodeManager) ProcessClientHeartbeatResponse(resp *tasksmanager.ClientHeartbeatResponse) {
	// å®¢æˆ·ç«¯å¿ƒè·³å“åº”ä¸­åŒ…å«æ–°ä¸Šçº¿çš„æœåŠ¡å™¨èŠ‚ç‚¹
	if resp != nil && resp.Success && len(resp.NewServerNodes) > 0 {
		// è¿‡æ»¤å‡ºçœŸæ­£çš„æ–°èŠ‚ç‚¹ï¼ˆå®¢æˆ·ç«¯ä¸çŸ¥é“çš„ï¼‰
		newNodes := make([]*tasksmanager.GrpcServerNodeInfo, 0)
		nm.knownNodesMu.RLock()
		for _, node := range resp.NewServerNodes {
			if _, known := nm.knownNodes[node.NodeUuid]; !known && node.NodeUuid != nm.nodeID {
				newNodes = append(newNodes, node)
			}
		}
		nm.knownNodesMu.RUnlock()

		if len(newNodes) > 0 {
			log.Printf("ğŸ“¡ å¿ƒè·³å“åº”ä¸­å‘ç° %d ä¸ªæ–°ä¸Šçº¿çš„æœåŠ¡å™¨èŠ‚ç‚¹ï¼Œæ­£åœ¨è‡ªåŠ¨è¿æ¥...", len(newNodes))
			for _, node := range newNodes {
				nm.OnNewNodeDiscovered(node)
			}
		}
		// å¦‚æœæ²¡æœ‰æ–°èŠ‚ç‚¹ï¼Œé™é»˜è·³è¿‡
	}
}

// ProcessRegistrationResponse å¤„ç†å®¢æˆ·ç«¯æ³¨å†Œå“åº”ï¼Œè¿æ¥åˆ°æœåŠ¡å™¨èŠ‚ç‚¹
func (nm *NodeManager) ProcessRegistrationResponse(resp *tasksmanager.RegisterClientResponse) {
	if resp != nil && resp.Success && len(resp.ServerNodes) > 0 {
		log.Printf("ğŸ“¡ å®¢æˆ·ç«¯æ³¨å†Œå“åº”ä¸­å‘ç° %d ä¸ªæœåŠ¡å™¨èŠ‚ç‚¹ï¼Œå¼€å§‹è‡ªåŠ¨è¿æ¥", len(resp.ServerNodes))
		nm.OnNodesDiscovered(resp.ServerNodes)
	}
}

// ProcessNodeMessage å¤„ç†èŠ‚ç‚¹æ¶ˆæ¯ï¼ˆå¤„ç† NODE_DISCOVERED æ¶ˆæ¯ï¼‰
func (nm *NodeManager) ProcessNodeMessage(msg *tasksmanager.NodeMessage) {
	if msg.MessageType == "NODE_DISCOVERED" {
		// è§£ææ–°èŠ‚ç‚¹ä¿¡æ¯
		var nodeInfo struct {
			NodeUUID string `json:"node_uuid"`
			NodeIP   string `json:"node_ip"`
			NodePort string `json:"node_port"`
		}

		if err := json.Unmarshal(msg.Payload, &nodeInfo); err != nil {
			log.Printf("è§£ææ–°èŠ‚ç‚¹æ¶ˆæ¯å¤±è´¥: %v", err)
			return
		}

		// é€šè¿‡ä¸»æœåŠ¡å™¨è·å–å®Œæ•´èŠ‚ç‚¹ä¿¡æ¯
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
		defer cancel()

		nodeListResp, err := nm.mainClient.GetGrpcServerNodeInfoList(ctx, &tasksmanager.GrpcServerNodeInfoListRequest{})
		if err == nil {
			for _, node := range nodeListResp.Items {
				if node.NodeUuid == nodeInfo.NodeUUID {
					nm.OnNewNodeDiscovered(node)
					break
				}
			}
		}
	}
}

// StartAutoDiscovery å¯åŠ¨è‡ªåŠ¨å‘ç°
func (nm *NodeManager) StartAutoDiscovery(ctx context.Context) {
	ticker := time.NewTicker(15 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			return
		case <-ticker.C:
			// å®šæœŸä»ä¸»æœåŠ¡å™¨è·å–èŠ‚ç‚¹åˆ—è¡¨
			nodeListResp, err := nm.mainClient.GetGrpcServerNodeInfoList(ctx, &tasksmanager.GrpcServerNodeInfoListRequest{})
			if err == nil {
				// æ£€æŸ¥æ˜¯å¦æœ‰æ–°èŠ‚ç‚¹
				for _, node := range nodeListResp.Items {
					if node.NodeUuid != nm.nodeID {
						nm.OnNewNodeDiscovered(node)
					}
				}
			}
		}
	}
}

// GetConnectionPoolSize è·å–è¿æ¥æ± å¤§å°
func (nm *NodeManager) GetConnectionPoolSize() int {
	nm.nodeConnectionsMu.RLock()
	defer nm.nodeConnectionsMu.RUnlock()
	return len(nm.nodeConnections)
}

// GetConnectedNodeUUIDs è·å–æ‰€æœ‰å·²è¿æ¥çš„èŠ‚ç‚¹ UUID åˆ—è¡¨
func (nm *NodeManager) GetConnectedNodeUUIDs() []string {
	nm.nodeConnectionsMu.RLock()
	defer nm.nodeConnectionsMu.RUnlock()
	uuids := make([]string, 0, len(nm.nodeConnections))
	for uuid := range nm.nodeConnections {
		uuids = append(uuids, uuid)
	}
	return uuids
}

// CheckConnectionHealth æ£€æŸ¥è¿æ¥æ± å¥åº·çŠ¶æ€
func (nm *NodeManager) CheckConnectionHealth() {
	nm.nodeConnectionsMu.RLock()
	brokenConnections := make([]string, 0)
	for uuid, conn := range nm.nodeConnections {
		if conn == nil {
			brokenConnections = append(brokenConnections, uuid)
			continue
		}

		// å°è¯•è°ƒç”¨ä¸€ä¸ªç®€å•çš„ RPC æ¥éªŒè¯è¿æ¥
		client, exists := nm.connectedNodes[uuid]
		if exists {
			ctx, cancel := context.WithTimeout(context.Background(), 1*time.Second)
			_, err := client.GetGrpcServerNodeInfoList(ctx, &tasksmanager.GrpcServerNodeInfoListRequest{})
			cancel()
			if err != nil {
				brokenConnections = append(brokenConnections, uuid)
				log.Printf("âš ï¸ æ£€æµ‹åˆ°è¿æ¥æ± ä¸­èŠ‚ç‚¹ %s è¿æ¥å·²æ–­å¼€: %v", uuid, err)
			}
		}
	}
	nm.nodeConnectionsMu.RUnlock()

	// æ¸…ç†æ–­å¼€çš„è¿æ¥
	if len(brokenConnections) > 0 {
		nm.nodeConnectionsMu.Lock()
		nm.connectedNodesMu.Lock()
		for _, uuid := range brokenConnections {
			if conn, exists := nm.nodeConnections[uuid]; exists && conn != nil {
				conn.Close()
			}
			delete(nm.nodeConnections, uuid)
			delete(nm.connectedNodes, uuid)
			log.Printf("ğŸ§¹ ä»è¿æ¥æ± ä¸­ç§»é™¤æ–­å¼€çš„è¿æ¥: %s", uuid)
		}
		nm.connectedNodesMu.Unlock()
		nm.nodeConnectionsMu.Unlock()
	}
}

// StartConnectionHealthCheck å¯åŠ¨è¿æ¥å¥åº·æ£€æŸ¥
func (nm *NodeManager) StartConnectionHealthCheck(ctx context.Context) {
	ticker := time.NewTicker(30 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			return
		case <-ticker.C:
			nm.CheckConnectionHealth()
			log.Printf("ğŸ“Š è¿æ¥æ± çŠ¶æ€: å·²è¿æ¥ %d ä¸ªæœåŠ¡å™¨èŠ‚ç‚¹", nm.GetConnectionPoolSize())
		}
	}
}

// Close å…³é—­æ‰€æœ‰è¿æ¥ï¼ˆæ¸…ç†è¿æ¥æ± ï¼‰
func (nm *NodeManager) Close() {
	log.Printf("ğŸ”Œ æ­£åœ¨å…³é—­è¿æ¥æ± ï¼Œå…±æœ‰ %d ä¸ªè¿æ¥", nm.GetConnectionPoolSize())

	nm.nodeConnectionsMu.Lock()
	for uuid, conn := range nm.nodeConnections {
		if conn != nil {
			conn.Close()
			log.Printf("ğŸ”Œ å·²å…³é—­è¿æ¥: %s", uuid)
		}
	}
	nm.nodeConnections = make(map[string]*grpc.ClientConn)
	nm.nodeConnectionsMu.Unlock()

	nm.connectedNodesMu.Lock()
	nm.connectedNodes = make(map[string]tasksmanager.TasksManagerClient)
	nm.connectedNodesMu.Unlock()

	log.Printf("âœ… è¿æ¥æ± å·²å…³é—­")
}
